--- a/valorant-apis/.env
+++ b/valorant-apis/.env
@@ -1,2 +1,1 @@
-VALORANT_CONTENT_API=https://br.api.riotgames.com/val/content/v1/contents?locale=pt-BR&api_key=RGAPI-eb967eac-bbf6-4c86-bbe0-e17347c12839
-MONGO_URI=mongodb+srv://jett:jett@cluster0.bsa34th.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://jett:jksdfsk@cluster0.bsa34th.mongodb.net/?retryWrites=true&w=majority
